# ICTU_Innovation_Lab1

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  plan.docx
agent/: .env.example  .gitignore  README.md  final_rag_data_normalized_v1.json  pyproject.toml
agent/configs/: model_registry.json  routing_policy.json
agent/docs/: BACKEND_HANDOFF.md  BA_AGENT_PHASE_PLAN.md  LIVE_FPT_SMOKE_REVIEW.md  LIVE_LEGAL_SAMPLE_REVIEW.md  MODEL_SELECTION_FPT_AI_FACTORY.md  PHASE_1_REVIEW.md  PHASE_2_REVIEW.md  PHASE_3_REVIEW.md  PHASE_4_REVIEW.md  PHASE_5_REVIEW.md  PHASE_6_REVIEW.md  RAG_REMEDIATION_PHASES.md
agent/evaluation/: golden_cases.json
agent/prompts/: compliance_agent.md  credit_agent.md  critic.md  planner.md  product_agent.md
agent/scripts/: audit_rag_corpus.py  build_gated_rag_corpus.py  build_rag_manifest.py  evaluate_agent_layer.py  evaluate_gated_retrieval.py  live_fpt_smoke_test.py  live_legal_samples.py  run_workflow_demo.py  smoke_test.py  validate_rag_data.py
agent/tests/: test_citation_validator.py  test_corpus_builder.py  test_critic_hitl_service.py  test_evaluation_and_safety.py  test_legal_structure_parser.py  test_model_strategy.py  test_overdraft_readiness_v11.py  test_rag_loader.py  test_rag_migration_evaluation.py  test_rag_policy_and_pipeline.py  test_rag_registry_quality_gate.py  test_readiness_and_specialists.py  test_router_and_workflow.py  test_workflow_runner.py
backend/: .env.example  Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml  requirements-test.txt  requirements.txt
backend/app/: __init__.py  (+20 more)
(+99 files in other folders)
