[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nexusops-agent"
version = "0.1.0"
description = "Hybrid multi-agent layer for NexusOps AI V3.1"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7,<3.0"
]

[project.optional-dependencies]
ai = [
  "httpx>=0.27,<1.0",
  "langgraph>=0.2,<1.0"
]
dev = [
  "pytest>=8,<9"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
