[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nexusops-backend"
version = "2.0.0"
description = "FastAPI backend and governed adapter for NexusOps Agent Layer"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic>=2.7,<3.0",
  "sqlalchemy>=2.0,<3.0",
]

[project.optional-dependencies]
test = [
  "httpx2>=2.7,<3.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
